# c_sdl_template

./: CMakeLists.txt  main.c
game/: Game.c  Game.h
